--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#C780FF</color>
-    <color name="primaryDark">#977BB6</color>
+    <color name="primary">#673AB7</color>
+    <color name="primaryDark">#512DA8</color>
     <color name="secondary">#FDFCFC</color>
     <color name="tertiary">#D9D9D9</color>
     <color name="tertiaryDark">#A6A6A6</color>
 
     <color name="primaryText">#000000</color>
-    <color name="secondaryText">#C780FF</color>
-    <color name="secondaryDarkText">#977BB6</color>
+    <color name="secondaryText">#673AB7</color>
+    <color name="secondaryDarkText">#512DA8</color>
     <color name="tertiaryText">#D9D9D9</color>
     <color name="tertiaryDarkText">#A6A6A6</color>
     <color name="whiteText">#FFFFFF</color>
