--- a/app/src/main/res/layout-sw360dp/fragment_profile_set_sleep_goal.xml
+++ b/app/src/main/res/layout-sw360dp/fragment_profile_set_sleep_goal.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".profileSetCalorieGoalFragment">
+    tools:context=".profileSetSleepGoalFragment">
 
     <ImageView
-        android:id="@+id/imageView41"
-        android:layout_width="0dp"
+        android:id="@+id/imageView46"
+        android:layout_width="372dp"
         android:layout_height="480dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/rectangle_shape"
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView78"
+        android:id="@+id/textView83"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -27,45 +27,45 @@
         android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/imageView41"
-        app:layout_constraintTop_toTopOf="@+id/imageView41" />
+        app:layout_constraintStart_toStartOf="@+id/imageView46"
+        app:layout_constraintTop_toTopOf="@+id/imageView46" />
 
     <ImageView
-        android:id="@+id/imageView42"
+        android:id="@+id/imageView47"
         android:layout_width="153dp"
         android:layout_height="80dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/rectangle_thin_stroke_shape"
-        app:layout_constraintStart_toStartOf="@+id/imageView41"
-        app:layout_constraintTop_toBottomOf="@+id/textView78" />
+        app:layout_constraintStart_toStartOf="@+id/imageView46"
+        app:layout_constraintTop_toBottomOf="@+id/textView83" />
 
     <ImageView
-        android:id="@+id/imageView45"
+        android:id="@+id/imageView48"
         android:layout_width="153dp"
         android:layout_height="80dp"
         android:layout_marginTop="20dp"
         android:src="@drawable/rectangle_thin_stroke_shape"
-        app:layout_constraintEnd_toEndOf="@+id/imageView41"
-        app:layout_constraintStart_toEndOf="@+id/imageView42"
-        app:layout_constraintTop_toBottomOf="@+id/textView78" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView46"
+        app:layout_constraintStart_toEndOf="@+id/imageView47"
+        app:layout_constraintTop_toBottomOf="@+id/textView83" />
 
     <TextView
-        android:id="@+id/textView79"
+        android:id="@+id/textView84"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/outfit_medium"
-        android:text="DAILY CALORIE: "
+        android:text="DAILY SLEEP HOURS: "
         android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/imageView41"
-        app:layout_constraintTop_toBottomOf="@+id/imageView42" />
+        app:layout_constraintStart_toStartOf="@+id/imageView46"
+        app:layout_constraintTop_toBottomOf="@+id/imageView47" />
 
     <EditText
-        android:id="@+id/etSetCalorieDaily"
+        android:id="@+id/etSetSleepDaily"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
@@ -76,72 +76,72 @@
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="@color/primaryText"
-        app:layout_constraintEnd_toEndOf="@+id/imageView41"
-        app:layout_constraintHorizontal_bias="0.20"
-        app:layout_constraintStart_toStartOf="@+id/imageView41"
-        app:layout_constraintTop_toBottomOf="@+id/textView79" />
-
-    <TextView
-        android:id="@+id/textView80"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_medium"
-        android:text="Kcal"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView41"
-        app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintStart_toEndOf="@+id/etSetCalorieDaily"
-        app:layout_constraintTop_toBottomOf="@+id/textView79" />
-
-    <TextView
-        android:id="@+id/textView81"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_medium"
-        android:text="WEEKLY CALORIE:"
-        android:textColor="@color/primaryText"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/imageView41"
-        app:layout_constraintTop_toBottomOf="@+id/etSetCalorieDaily" />
-
-    <EditText
-        android:id="@+id/etSetCalorieWeekly"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/text_field_primary_border"
-        android:ems="10"
-        android:fontFamily="@font/poppins_light"
-        android:inputType="number"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:textColor="@color/primaryText"
-        app:layout_constraintEnd_toEndOf="@+id/imageView41"
+        app:layout_constraintEnd_toEndOf="@+id/imageView46"
         app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toStartOf="@+id/imageView41"
-        app:layout_constraintTop_toBottomOf="@+id/textView81" />
+        app:layout_constraintStart_toStartOf="@+id/imageView46"
+        app:layout_constraintTop_toBottomOf="@+id/textView84" />
 
     <TextView
-        android:id="@+id/textView82"
+        android:id="@+id/textView85"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_medium"
+        android:text="WEEK SLEEP HOURS:"
+        android:textColor="@color/primaryText"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/imageView46"
+        app:layout_constraintTop_toBottomOf="@+id/etSetSleepDaily" />
+
+    <EditText
+        android:id="@+id/etSetSleepWeekly"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/text_field_primary_border"
+        android:ems="10"
+        android:fontFamily="@font/poppins_light"
+        android:inputType="number"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textColor="@color/primaryText"
+        app:layout_constraintEnd_toEndOf="@+id/imageView46"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toStartOf="@+id/imageView46"
+        app:layout_constraintTop_toBottomOf="@+id/textView85" />
+
+    <TextView
+        android:id="@+id/textView86"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/outfit_medium"
-        android:text="Kcal"
+        android:text="Hours"
         android:textColor="?attr/colorPrimary"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView41"
+        app:layout_constraintEnd_toEndOf="@+id/imageView46"
         app:layout_constraintHorizontal_bias="0.1"
-        app:layout_constraintStart_toEndOf="@+id/etSetCalorieWeekly"
-        app:layout_constraintTop_toBottomOf="@+id/textView81" />
+        app:layout_constraintStart_toEndOf="@+id/etSetSleepDaily"
+        app:layout_constraintTop_toBottomOf="@+id/textView84" />
+
+    <TextView
+        android:id="@+id/textView87"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_medium"
+        android:text="Hours"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView46"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toEndOf="@+id/etSetSleepWeekly"
+        app:layout_constraintTop_toBottomOf="@+id/textView85" />
 
     <Button
-        android:id="@+id/btnSetCalorieGoal"
+        android:id="@+id/btnSetSleepGoal"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
@@ -150,12 +150,12 @@
         android:fontFamily="@font/poppins_semibold"
         android:text="Set Goal"
         android:textColor="@color/btnText"
-        app:layout_constraintEnd_toEndOf="@+id/imageView41"
-        app:layout_constraintStart_toStartOf="@+id/imageView41"
-        app:layout_constraintTop_toBottomOf="@+id/etSetCalorieWeekly" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView46"
+        app:layout_constraintStart_toStartOf="@+id/imageView46"
+        app:layout_constraintTop_toBottomOf="@+id/etSetSleepWeekly" />
 
     <Button
-        android:id="@+id/btnSetCalorieCancel"
+        android:id="@+id/btnSetSleepCancel"
         android:layout_width="180dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
@@ -164,52 +164,38 @@
         android:fontFamily="@font/poppins_semibold"
         android:text="Cancel"
         android:textColor="@color/btnText"
-        app:layout_constraintEnd_toEndOf="@+id/imageView41"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="@+id/imageView41"
-        app:layout_constraintTop_toBottomOf="@+id/btnSetCalorieGoal" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView46"
+        app:layout_constraintStart_toStartOf="@+id/imageView46"
+        app:layout_constraintTop_toBottomOf="@+id/btnSetSleepGoal" />
 
     <TextView
-        android:id="@+id/textView92"
+        android:id="@+id/textView88"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/outfit_medium"
-        android:text="DAILY CALORIES"
+        android:text="DAILY HOURS"
         android:textColor="@color/primaryText"
         android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView42"
-        app:layout_constraintTop_toTopOf="@+id/imageView42" />
+        app:layout_constraintStart_toStartOf="@+id/imageView47"
+        app:layout_constraintTop_toTopOf="@+id/imageView47" />
 
     <TextView
-        android:id="@+id/textView93"
+        android:id="@+id/textView89"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/outfit_medium"
-        android:text="WEEKLY CALORIES"
+        android:text="WEEKLY HOURS"
         android:textColor="@color/primaryText"
         android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView45"
-        app:layout_constraintTop_toTopOf="@+id/imageView45" />
+        app:layout_constraintStart_toStartOf="@+id/imageView48"
+        app:layout_constraintTop_toTopOf="@+id/imageView48" />
 
     <TextView
-        android:id="@+id/tvSetCalorieDaily"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="0"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView42"
-        app:layout_constraintStart_toStartOf="@+id/imageView42"
-        app:layout_constraintTop_toBottomOf="@+id/textView92" />
-
-    <TextView
-        android:id="@+id/tvSetCalorieWeekly"
+        android:id="@+id/tvSetSleepDaily"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/outfit_medium"
@@ -217,19 +203,32 @@
         android:textColor="?attr/colorPrimary"
         android:textSize="32sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView45"
-        app:layout_constraintStart_toStartOf="@+id/imageView45"
-        app:layout_constraintTop_toBottomOf="@+id/textView93" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView47"
+        app:layout_constraintStart_toStartOf="@+id/imageView47"
+        app:layout_constraintTop_toBottomOf="@+id/textView88" />
+
+    <TextView
+        android:id="@+id/tvSetSleepWeekly"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_medium"
+        android:text="0"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/imageView48"
+        app:layout_constraintStart_toStartOf="@+id/imageView48"
+        app:layout_constraintTop_toBottomOf="@+id/textView89" />
 
     <ProgressBar
-        android:id="@+id/pbSetCalorie"
+        android:id="@+id/pbSetSleep"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminateTint="?attr/colorPrimary"
         android:progressDrawable="@drawable/circle_progress_bar_primary"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView41"
-        app:layout_constraintEnd_toEndOf="@+id/imageView41"
-        app:layout_constraintStart_toStartOf="@+id/imageView41"
-        app:layout_constraintTop_toBottomOf="@+id/etSetCalorieWeekly" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView46"
+        app:layout_constraintStart_toStartOf="@+id/imageView46"
+        app:layout_constraintTop_toBottomOf="@+id/etSetSleepWeekly" />
 </androidx.constraintlayout.widget.ConstraintLayout>
