--- a/app/src/main/res/layout-sw411dp/fragment_profile_steps.xml
+++ b/app/src/main/res/layout-sw411dp/fragment_profile_steps.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profileCalorieFragment">
+    tools:context=".profileStepsFragment">
+
 
     <TextView
-        android:id="@+id/textView47"
+        android:id="@+id/textView28"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="This Week Progress"
@@ -20,176 +20,163 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView29"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:src="@drawable/calendar_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView47"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
-        android:id="@+id/textView48"
+        android:id="@+id/textView29"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="Total Calorie"
+        android:fontFamily="@font/outfit_medium"
+        android:text="@string/total_steps"
         android:textColor="@color/tertiaryDarkText"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView47" />
+        app:layout_constraintTop_toBottomOf="@+id/textView28" />
 
     <TextView
-        android:id="@+id/tvProfileCalorieTaken"
+        android:id="@+id/tvProfileStepTaken"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:fontFamily="@font/outfit_semi_bold"
+        android:fontFamily="@font/outfit_medium"
         android:text="0"
         android:textColor="@color/primaryText"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView48" />
+        app:layout_constraintTop_toBottomOf="@+id/textView29" />
 
     <TextView
-        android:id="@+id/textView50"
+        android:id="@+id/textView31"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="13dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="Kcal"
+        android:fontFamily="@font/outfit_medium"
+        android:text="@string/steps"
         android:textColor="@color/tertiaryDarkText"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/tvProfileCalorieTaken"
-        app:layout_constraintTop_toTopOf="@+id/tvProfileCalorieTaken" />
+        app:layout_constraintStart_toEndOf="@+id/tvProfileStepTaken"
+        app:layout_constraintTop_toTopOf="@+id/tvProfileStepTaken" />
 
     <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/calorieBarChart"
+        android:id="@+id/stepBarChart"
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/rectangle_shape"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvProfileCalorieTaken" />
+        app:layout_constraintTop_toBottomOf="@+id/tvProfileStepTaken" />
 
     <ImageView
-        android:id="@+id/imageView30"
+        android:id="@+id/imageView20"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/rectangle_shape"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calorieBarChart" />
+        app:layout_constraintTop_toBottomOf="@+id/stepBarChart" />
 
     <TextView
-        android:id="@+id/textView51"
+        android:id="@+id/textView32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_semi_bold"
+        android:fontFamily="@font/outfit_medium"
         android:text="Goal"
         android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/imageView30"
-        app:layout_constraintTop_toTopOf="@+id/imageView30" />
+        app:layout_constraintStart_toStartOf="@+id/imageView20"
+        app:layout_constraintTop_toTopOf="@+id/imageView20" />
 
     <ImageView
-        android:id="@+id/imageView31"
-        android:layout_width="153dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/rectangle_thin_stroke_shape"
-        app:layout_constraintStart_toStartOf="@+id/imageView30"
-        app:layout_constraintTop_toBottomOf="@+id/textView51" />
-
-    <ImageView
-        android:id="@+id/imageView32"
+        android:id="@+id/imageView21"
         android:layout_width="153dp"
         android:layout_height="80dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/rectangle_thin_stroke_shape"
-        app:layout_constraintEnd_toEndOf="@+id/imageView30"
-        app:layout_constraintStart_toEndOf="@+id/imageView31"
-        app:layout_constraintTop_toBottomOf="@+id/textView51" />
+        app:layout_constraintEnd_toStartOf="@+id/imageView23"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/imageView20"
+        app:layout_constraintTop_toBottomOf="@+id/textView32" />
+
+    <ImageView
+        android:id="@+id/imageView23"
+        android:layout_width="150dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/rectangle_thin_stroke_shape"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView21"
+        app:layout_constraintTop_toBottomOf="@+id/textView32" />
+
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_medium"
+        android:text="Daily Steps"
+        android:textColor="@color/primaryText"
+        app:layout_constraintStart_toStartOf="@+id/imageView21"
+        app:layout_constraintTop_toTopOf="@+id/imageView21" />
+
+    <TextView
+        android:id="@+id/tvProfileStepDailyGoal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_medium"
+        android:text="0"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView21"
+        app:layout_constraintStart_toStartOf="@+id/imageView21"
+        app:layout_constraintTop_toBottomOf="@+id/textView33" />
+
+    <TextView
+        android:id="@+id/textView35"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_medium"
+        android:text="Weekly Steps"
+        android:textColor="@color/primaryText"
+        app:layout_constraintStart_toStartOf="@+id/imageView23"
+        app:layout_constraintTop_toTopOf="@+id/imageView23" />
+
+    <TextView
+        android:id="@+id/tvProfileStepWeeklyGoal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/outfit_medium"
+        android:text="0"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView23"
+        app:layout_constraintStart_toStartOf="@+id/imageView23"
+        app:layout_constraintTop_toBottomOf="@+id/textView35" />
 
     <Button
-        android:id="@+id/btnProfileCalorieSetGoal"
+        android:id="@+id/btnProfileStepSetGoal"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/btn_mid_rounded"
         android:backgroundTint="?attr/colorPrimary"
-        android:fontFamily="@font/outfit_semi_bold"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Set Goal"
         android:textColor="@color/btnText"
-        app:layout_constraintEnd_toEndOf="@+id/imageView30"
-        app:layout_constraintStart_toStartOf="@+id/imageView30"
-        app:layout_constraintTop_toBottomOf="@+id/imageView31" />
-
-    <TextView
-        android:id="@+id/textView52"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="DAILY CALORIE"
-        android:textColor="@color/primaryText"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView31"
-        app:layout_constraintTop_toTopOf="@+id/imageView31" />
-
-    <TextView
-        android:id="@+id/tvProfileCaloreiDailyGoal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="0"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="32sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView31"
-        app:layout_constraintStart_toStartOf="@+id/imageView31"
-        app:layout_constraintTop_toBottomOf="@+id/textView52" />
-
-    <TextView
-        android:id="@+id/textView54"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="WEEKLY CALORIE"
-        android:textColor="@color/primaryText"
-        app:layout_constraintStart_toStartOf="@+id/imageView32"
-        app:layout_constraintTop_toTopOf="@+id/imageView32" />
-
-    <TextView
-        android:id="@+id/tvProfileCalorieWeeklyGoal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="0"
-        android:textColor="?attr/colorPrimary"
-        android:textSize="32sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView32"
-        app:layout_constraintStart_toStartOf="@+id/imageView32"
-        app:layout_constraintTop_toBottomOf="@+id/textView54" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView20"
+        app:layout_constraintStart_toStartOf="@+id/imageView20"
+        app:layout_constraintTop_toBottomOf="@+id/imageView21" />
 
     <ProgressBar
-        android:id="@+id/pbProfileCalorie"
+        android:id="@+id/pbProfileStep"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -197,5 +184,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView47" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
