--- a/app/src/main/res/layout-sw411dp/fragment_profile_water.xml
+++ b/app/src/main/res/layout-sw411dp/fragment_profile_water.xml
@@ -4,192 +4,178 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profileCalorieFragment">
+    tools:context=".profileWaterFragment">
 
     <TextView
-        android:id="@+id/textView47"
+        android:id="@+id/textView37"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="This Week Progress"
         android:textColor="@color/primaryText"
-        android:textSize="26sp"
+        android:textSize="26dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView29"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:src="@drawable/calendar_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView47"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
-        android:id="@+id/textView48"
+        android:id="@+id/textView38"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="Total Calorie"
+        android:fontFamily="@font/outfit_medium"
+        android:text="Total Water Intake"
         android:textColor="@color/tertiaryDarkText"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView47" />
+        app:layout_constraintTop_toBottomOf="@+id/textView37" />
 
     <TextView
-        android:id="@+id/tvProfileCalorieTaken"
+        android:id="@+id/tvProfileWaterTaken"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:fontFamily="@font/outfit_semi_bold"
+        android:fontFamily="@font/outfit_medium"
         android:text="0"
         android:textColor="@color/primaryText"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView48" />
+        app:layout_constraintTop_toBottomOf="@+id/textView38" />
 
     <TextView
-        android:id="@+id/textView50"
+        android:id="@+id/textView40"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="13dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="Kcal"
+        android:fontFamily="@font/outfit_medium"
+        android:text="mL"
         android:textColor="@color/tertiaryDarkText"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/tvProfileCalorieTaken"
-        app:layout_constraintTop_toTopOf="@+id/tvProfileCalorieTaken" />
+        app:layout_constraintStart_toEndOf="@+id/tvProfileWaterTaken"
+        app:layout_constraintTop_toTopOf="@+id/tvProfileWaterTaken" />
 
     <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/calorieBarChart"
+        android:id="@+id/waterBarChart"
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/rectangle_shape"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvProfileCalorieTaken" />
+        app:layout_constraintTop_toBottomOf="@+id/tvProfileWaterTaken" />
 
     <ImageView
-        android:id="@+id/imageView30"
+        android:id="@+id/imageView25"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/rectangle_shape"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calorieBarChart" />
+        app:layout_constraintTop_toBottomOf="@+id/waterBarChart" />
+
+    <ImageView
+        android:id="@+id/imageView26"
+        android:layout_width="150dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/rectangle_thin_stroke_shape"
+        app:layout_constraintEnd_toStartOf="@+id/imageView28"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/imageView25"
+        app:layout_constraintTop_toBottomOf="@+id/textView41" />
 
     <TextView
-        android:id="@+id/textView51"
+        android:id="@+id/textView41"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_semi_bold"
+        android:fontFamily="@font/outfit_medium"
         android:text="Goal"
         android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/imageView30"
-        app:layout_constraintTop_toTopOf="@+id/imageView30" />
+        app:layout_constraintStart_toStartOf="@+id/imageView25"
+        app:layout_constraintTop_toTopOf="@+id/imageView25" />
 
     <ImageView
-        android:id="@+id/imageView31"
-        android:layout_width="153dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/rectangle_thin_stroke_shape"
-        app:layout_constraintStart_toStartOf="@+id/imageView30"
-        app:layout_constraintTop_toBottomOf="@+id/textView51" />
-
-    <ImageView
-        android:id="@+id/imageView32"
-        android:layout_width="153dp"
+        android:id="@+id/imageView28"
+        android:layout_width="150dp"
         android:layout_height="80dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/rectangle_thin_stroke_shape"
-        app:layout_constraintEnd_toEndOf="@+id/imageView30"
-        app:layout_constraintStart_toEndOf="@+id/imageView31"
-        app:layout_constraintTop_toBottomOf="@+id/textView51" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView26"
+        app:layout_constraintTop_toBottomOf="@+id/textView41" />
 
     <Button
-        android:id="@+id/btnProfileCalorieSetGoal"
+        android:id="@+id/btnProfileWaterSetGoal"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@drawable/btn_mid_rounded"
         android:backgroundTint="?attr/colorPrimary"
-        android:fontFamily="@font/outfit_semi_bold"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Set Goal"
         android:textColor="@color/btnText"
-        app:layout_constraintEnd_toEndOf="@+id/imageView30"
-        app:layout_constraintStart_toStartOf="@+id/imageView30"
-        app:layout_constraintTop_toBottomOf="@+id/imageView31" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView25"
+        app:layout_constraintStart_toStartOf="@+id/imageView25"
+        app:layout_constraintTop_toBottomOf="@+id/imageView26" />
 
     <TextView
-        android:id="@+id/textView52"
+        android:id="@+id/textView42"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="DAILY CALORIE"
+        android:fontFamily="@font/outfit_medium"
+        android:text="Daily Water"
         android:textColor="@color/primaryText"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView31"
-        app:layout_constraintTop_toTopOf="@+id/imageView31" />
+        app:layout_constraintStart_toStartOf="@+id/imageView26"
+        app:layout_constraintTop_toTopOf="@+id/imageView26" />
 
     <TextView
-        android:id="@+id/tvProfileCaloreiDailyGoal"
+        android:id="@+id/tvProfileWaterDailyGoal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/outfit_semi_bold"
+        android:fontFamily="@font/outfit_medium"
         android:text="0"
         android:textColor="?attr/colorPrimary"
         android:textSize="32sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView31"
-        app:layout_constraintStart_toStartOf="@+id/imageView31"
-        app:layout_constraintTop_toBottomOf="@+id/textView52" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView26"
+        app:layout_constraintStart_toStartOf="@+id/imageView26"
+        app:layout_constraintTop_toBottomOf="@+id/textView42" />
 
     <TextView
-        android:id="@+id/textView54"
+        android:id="@+id/textView44"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="WEEKLY CALORIE"
+        android:fontFamily="@font/outfit_medium"
+        android:text="Weekly Water"
         android:textColor="@color/primaryText"
-        app:layout_constraintStart_toStartOf="@+id/imageView32"
-        app:layout_constraintTop_toTopOf="@+id/imageView32" />
+        app:layout_constraintStart_toStartOf="@+id/imageView28"
+        app:layout_constraintTop_toTopOf="@+id/imageView28" />
 
     <TextView
-        android:id="@+id/tvProfileCalorieWeeklyGoal"
+        android:id="@+id/tvProfileWaterWeeklyGoal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/outfit_semi_bold"
+        android:fontFamily="@font/outfit_medium"
         android:text="0"
         android:textColor="?attr/colorPrimary"
         android:textSize="32sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView32"
-        app:layout_constraintStart_toStartOf="@+id/imageView32"
-        app:layout_constraintTop_toBottomOf="@+id/textView54" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView28"
+        app:layout_constraintStart_toStartOf="@+id/imageView28"
+        app:layout_constraintTop_toBottomOf="@+id/textView44" />
 
     <ProgressBar
-        android:id="@+id/pbProfileCalorie"
+        android:id="@+id/pbProfileWater"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -197,5 +183,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView47" />
+        app:layout_constraintTop_toBottomOf="@+id/textView37" />
 </androidx.constraintlayout.widget.ConstraintLayout>
